[package]
edition = "2018"
name = "mkl26"
version = "0.2.0"
authors = ["Gabriel Smith <ga29smith@gmail.com>"]

[dependencies]
arraydeque = { version = "^0.4", default-features = false }
bit_field = "^0.8"
cortex-m = { version = "^0.6", features = ["const-fn", "inline-asm"] }
cortex-m-rt = "^0.6"
embedded-hal = { version = "^0.2.3", features = ["unproven"] }
mkl26z4 = "^0.1"
nb = "0.1.1"
void = { version = "^1", default-features = false }
volatile-register = "^0.2"

[dev-dependencies]
panic-halt = "0.2"

[features]
rt = ["mkl26z4/rt"]
fgpio = []

i2c-isr = ["rt"]
i2c-slave = ["i2c-isr"]
i2c-dma = ["i2c-isr"]

spi-isr = ["rt"]
spi-slave = ["spi-isr"]
spi-dma = ["spi-isr"]

uart-isr = ["rt"]
uart-dma = ["uart-isr"]

[[example]]
name = "pit"
required-features = ["rt"]

[profile.dev]
debug = true
lto = true

[profile.release]
lto = true
debug = true
opt-level = "s"
